examples/v1multiport/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: unicorn-backend
spec:
  type: ClusterIP
  selector:
    app: unicorn-backend
  ports:
    - name: http1
      protocol: TCP
      port: 10001
      targetPort: http1
---
apiVersion: v1
kind: Service
metadata:
  name: unicorn-backend-admin
spec:
  type: ClusterIP
  selector:
    app: unicorn-backend
  ports:
    - name: http2
      protocol: TCP
      port: 10002
      targetPort: http2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn-backend
  labels:
    app: unicorn-backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unicorn-backend
  template:
    metadata:
      labels:
        app: unicorn-backend
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        consul.hashicorp.com/transparent-proxy: 'false'
        consul.hashicorp.com/connect-service: 'unicorn-backend,unicorn-backend-admin'
        consul.hashicorp.com/connect-service-port: '10001,10002'
        consul.hashicorp.com/connect-service-upstreams: 'unicorn-s3.svc:10006'
        consul.hashicorp.com/enable-metrics: 'false'
        # consul.hashicorp.com/service-meta-version: 'v1'
    spec:
      serviceAccountName: unicorn-backend
      containers:
        - name: unicorn-backend
          image: nicholasjackson/fake-service:v0.26.0
          # imagePullPolicy: Always       # Probably don't need this
          ports:
            - containerPort: 10001
              name: http1
        - name: unicorn-backend2
          image: nicholasjackson/fake-service:v0.26.0
          # imagePullPolicy: Always       # Probably don't need this
          ports:
            - containerPort: 10002
              name: http2
