examples/v1multiport/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: unicorn-frontend
spec:
  type: LoadBalancer
  selector:
    app: unicorn-frontend
  ports:
    - name: http
      protocol: TCP
      port: 8000 # Should be the port the Kube LB will listen on to forward to TCP/10000
      targetPort: 10000 # This should line up with the FakeService LISTEN_ADDR: 0.0.0.0:10000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn-frontend
  labels:
    app: unicorn-frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unicorn-frontend
  template:
    metadata:
      labels:
        app: unicorn-frontend
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        consul.hashicorp.com/transparent-proxy: 'true'
    spec:
      serviceAccountName: unicorn-frontend
      containers:
        - name: unicorn-frontend
          image: nicholasjackson/fake-service:v0.26.0
          # imagePullPolicy: Always       # Probably don't need this
          ports:
            - containerPort: 10000
              # readinessProbe:
              #   httpGet:
              #     scheme: HTTP
              #     path: /
              #     port: 10000
          # initialDelaySeconds: 10
          # periodSeconds: 5
