examples/v1multiport/s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: unicorn-s3
spec:
  type: ClusterIP
  selector:
    app: unicorn-s3
  ports:
    - name: http1
      protocol: TCP
      port: 10006
      targetPort: http1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn-s3
  labels:
    app: unicorn-s3
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unicorn-s3
  template:
    metadata:
      labels:
        app: unicorn-s3
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/service-meta-version: 'v1'
    spec:
      serviceAccountName: unicorn-s3
      containers:
        - name: unicorn-s3
          image: nicholasjackson/fake-service:v0.26.0
          # imagePullPolicy: Always       # Probably don't need this
          ports:
            - containerPort: 10006
              name: http1
          # readinessProbe:
          #   httpGet:
          #     scheme: HTTP
          #     path: /
          #     port: 10007
          #   initialDelaySeconds: 10
          #   periodSeconds: 5
