examples/v1multiport/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: consul-api-gateway
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
    - name: consul-apig-http-listener
      protocol: HTTP
      port: 8888
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces: # Choose which namespaces are allowed to use this Gateway. Not required.
          from: Selector
          selector:
            matchLabels: # This label is added automatically as of K8s 1.22 to all namespaces
              kubernetes.io/metadata.name: default
